public/css/style.css
html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
box-sizing: inherit;
}


body {
background-color: rgb(250, 212, 208);
font-family: "Montserrat", serif;
font-optical-sizing: auto;
font-weight: 200;
font-style: normal;


}
h1 {
  text-align: center;
  color: rgb(255, 255, 255);
  font-family: "Montserrat", serif;
  font-weight: 600;
  font-style: semi-bold;
}

h2 {
  text-align: center;
  color: rgb(255, 255, 255);
  font-family: "Montserrat", serif;
}

h3 {
  text-align: center;
  color: rgb(43, 90, 245);
  font-size:45px;
  font-family: "Bebas Neue", sans-serif;
}


  .form-control-dark {
    border-color: var(--bs-gray);
  }
  
header{
  padding: 20px;
  background-color: #333;
  border: 10px solid;
  color: #333;
 
}

.spacer {
  min-height: 80px;
}

 footer{
  padding: 20px;
  text-align: center;
  
 }

